--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <nav>
     <ul>
-      <li><a href="#about">About the Series</a></li>
+      <li><a href="#about">About</a></li>
       <li><a href="#books">Books</a></li>
       <li><a href="#movies">Movies</a></li>
       <li><a href="#characters">Characters</a></li>
@@ -23,9 +23,8 @@
   <main>
     <section id="about">
       <h2>About the Series</h2>
-      <p>The Lord of the Rings is a fantasy novel series written by J.R.R. Tolkien. It tells the story of the hobbit Frodo Baggins and his journey to destroy the One Ring, a powerful and evil artifact created by the dark lord Sauron.</p>
-      <p>The series is set in Middle-earth, a fictional world created by Tolkien. It features a wide range of characters, including hobbits, humans, elves, dwarves, and wizards, as well as various creatures such as orcs, trolls, and dragons.</p>
-      <p>The series has been widely popular and influential, and has been adapted into numerous other media, including films, video games, and stage productions.</p>
+      <p>The Lord of the Rings is a classic fantasy novel series written by J.R.R. Tolkien.</p>
+      <img src="middle-earth-map.jpg" alt="Map of Middle-earth" class="map">
     </section>
 
     <section id="books">
@@ -35,4 +34,17 @@
         <li>The Two Towers</li>
         <li>The Return of the King</li>
       </ul>
-      <p>The Lord of the Rings consists of three volumes: The Fellowship of the Ring, The Two Towers, and The Return of the King. The books were originally published in 1954, 1955, and 1956, respectively.</
+      <p>The Lord of the Rings consists of three volumes:</p>
+      <img src="book-covers.jpg" alt="Book covers for The Fellowship of the Ring, The Two Towers, and The Return of the King" class="book-covers">
+    </section>
+
+    <section id="movies">
+      <h2>Movies</h2>
+      <p>The Lord of the Rings has been adapted into a trilogy of highly successful films directed by Peter Jackson.</p>
+      <img src="movie-posters.jpg" alt="Movie posters for The Fellowship of the Ring, The Two Towers, and The Return of the King" class="movie-posters">
+      <p>Click <a href="https://www.imdb.com/title/tt0120737/">here</a> to view the IMDb page for the first film in the trilogy, The Fellowship of the Ring.</p>
+    </section>
+
+    <section id="characters">
+      <h2>Characters</h2>
+      <p>The Lord of the Rings features a wide range of characters, including hobbits, humans, elves, dwarves, and wizards
