--- a/index.html
+++ b/index.html
@@ -44,7 +44,29 @@
       <img src="movie-posters.jpg" alt="Movie posters for The Fellowship of the Ring, The Two Towers, and The Return of the King" class="movie-posters">
       <p>Click <a href="https://www.imdb.com/title/tt0120737/">here</a> to view the IMDb page for the first film in the trilogy, The Fellowship of the Ring.</p>
     </section>
+    
+  <section id="characters">
+    <h2>Characters</h2>
+    <p>The Lord of the Rings features a wide range of characters, including hobbits, humans, elves, dwarves, and wizards, as well as various creatures such as orcs, trolls, and dragons.</p>
+    <img src="characters.jpg" alt="Images of characters from The Lord of the Rings" class="characters">
+  </section>
 
-    <section id="characters">
-      <h2>Characters</h2>
-      <p>The Lord of the Rings features a wide range of characters, including hobbits, humans, elves, dwarves, and wizards
+  <section id="merchandise">
+    <h2>Merchandise</h2>
+    <p>The Lord of the Rings has inspired a wide range of merchandise, including collectible figures, clothing, jewelry, and more.</p>
+    <img src="merchandise.jpg" alt="Images of merchandise inspired by The Lord of the Rings" class="merchandise">
+    <p>Click <a href="https://www.tolkien.co.uk/">here</a> to browse official Lord of the Rings merchandise at the official website.</p>
+  </section>
+  </main>
+
+  <footer>
+    <p>Copyright 2022 The Lord of the Rings</p>
+    <ul>
+      <li><a href="https://www.tolkien.co.uk/">Official website</a></li>
+      <li><a href="https://www.facebook.com/lordoftherings">Facebook</a></li>
+      <li><a href="https://www.instagram.com/lordoftherings">Instagram</a></li>
+      <li><a href="https://twitter.com/lotr">Twitter</a></li>
+    </ul>
+  </footer>
+</body>
+</html>
