--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
 </head>
 <body>
   <header>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b0/Tloftr-logo.svg" alt="The Lord of the Rings logo" class="logo">
-    <h1>The Lord of the Rings</h1>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#books">Books</a></li>
-      <li><a href="#movies">Movies</a></li>
-      <li><a href="#characters">Characters</a></li>
-      <li><a href="#merchandise">Merchandise</a></li>
-    </ul>
-  </nav>
+      <div class=“logo-img”>
+        <img
+          src=“https://upload.wikimedia.org/wikipedia/commons/b/b0/Tloftr-logo.svg”
+          alt=“The Lord of the Rings logo”
+          class=“logo”
+        />
+      </div>
+      <div class=“nav-container”>
+        <nav>
+          <ul>
+            <li><a href=“#about”>About</a></li>
+            <li><a href=“#books”>Books</a></li>
+            <li><a href=“#movies”>Movies</a></li>
+            <li><a href=“#characters”>Characters</a></li>
+            <li><a href=“#merchandise”>Merchandise</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
   <main>
     <section id="about">
