--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
       <div class=“logo-img”>
         <img
-          src=“https://upload.wikimedia.org/wikipedia/commons/b/b0/Tloftr-logo.svg”
+          src=“Tloftr-logo.svg”
           alt=“The Lord of the Rings logo”
           class=“logo”
         />
